# denox

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  DENOX_DESIGN.md  LICENSE  README.md  checksum-Elixir.Denox.Native.exs  deno.json.example  devenv.nix  devenv.yaml  mix.exs
.github/scripts/: build-static-nif.sh
.github/workflows/: ci.yml  e2e.yml  release.yml  test.yml
bench/: denox_bench.exs  pool_bench.exs
e2e_test/: script_call_test.exs  script_eval_test.exs
e2e_test/scripts/: arithmetic.js  array_ops.js  async_ops.js  callable_funcs.js  callable_funcs.ts  error_handling.js  json_processing.js  string_ops.js  typescript_ops.ts
example/: .env  .gitignore  bunfig.toml  mix.exs  package.json
example/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: denox.ex
native/denox_nif/: Cargo.toml
native/denox_nif/src/: callback_op.rs  fetch_op.rs  globals_op.rs  lib.rs  runtime_run.rs  timer_op.rs  ts_loader.rs
test/: coverage_gaps_test.exs  denox_async_test.exs  denox_callback_test.exs  denox_cdn_test.exs  denox_cli_internals_test.exs  denox_cli_run_fake_test.exs  denox_cli_run_test.exs  denox_cli_test.exs  denox_cli_unit_test.exs  denox_deps_test.exs  denox_deps_unit_test.exs  denox_file_test.exs  denox_globals_test.exs  denox_import_map_test.exs  denox_json_test.exs  denox_mix_tasks_test.exs  denox_module_test.exs  denox_npm_test.exs  denox_npm_unit_test.exs  denox_permissions_test.exs  denox_pool_test.exs  denox_run_base_test.exs  denox_run_test.exs  denox_sandbox_test.exs  denox_snapshot_test.exs  denox_static_nif_release_test.exs  denox_telemetry_test.exs  denox_test.exs  denox_ts_test.exs  test_helper.exs
(+33 files in other folders)
