[package]
name = "denox_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "denox_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
deno_core = "0.311"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"

[profile.dev.package.v8]
opt-level = 1
