[package]
name = "denox_nif"
version = "0.2.0"
edition = "2021"

[lib]
name = "denox_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
deno_core = "0.311"
deno_ast = { version = "0.53", features = ["transpiling"] }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
ureq = "2"

[profile.dev.package.v8]
opt-level = 1
