[package]
name = "denox_nif"
version = "0.6.0"
edition = "2021"

[lib]
name = "denox_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
deno_runtime = "0.180"
deno_permissions = "0.31"
deno_core = "0.311"
deno_ast = { version = "0.42", features = ["transpiling"] }
deno_fs = "0.81"
tokio = { version = "=1.36.0", features = ["rt"] }
tokio-util = "=0.7.12"
tokio-stream = "=0.1.14"
serde = { version = ">=1.0.197, <1.0.219", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
log = "0.4"
ureq = "2"

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.dev.package.v8]
opt-level = 1
